test/ill-formed/0040_complex_vla_param.c
int size () { return 100; }
void f (int n, int a[size ()]) {}
